fix: menu overflow

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-end;
     gap: 0.6em;
-    margin-left: 2em;
+    margin-left: 1em;
 
     a {
         background-color: #f7f7f7;
