--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -65,13 +65,19 @@ $bg-col: #f7f7f7;
         outline: none;
         border: none;
         cursor: pointer;
+        display: none;
+        background-color: transparent;
         &:hover {
             box-shadow: none;
+        }
+
+        @include sm {
+            display: block;
         }
     }
 }
 
-.menu-container{
+.show-menu {
     display: flex;
     justify-content: center;
     position: absolute;
@@ -79,11 +85,10 @@ $bg-col: #f7f7f7;
     background-color: white;
     width: 100%;
     height: 100%;
-    right: -100%;
     transition: all 0.35s ease;
 }
 
-.show-menu{
+.menu-container {
     display: flex;
     justify-content: center;
     position: absolute;
@@ -92,5 +97,5 @@ $bg-col: #f7f7f7;
     width: 100%;
     height: 100%;
     transition: all 0.35s ease;
-
+    display: none;
 }
